@@ -81,5 +81,7 @@ void gtt_projects_tree_set_show_seconds (GttProjectsTree *gpt, gboolean show_sec
 gboolean gtt_projects_tree_get_show_seconds (GttProjectsTree *gpt);
 void gtt_projects_tree_set_highlight_active (GttProjectsTree *gpt, gboolean highlight_active);
 gboolean gtt_projects_tree_get_highlight_active (GttProjectsTree *gpt);
+GttProject *gtt_projects_tree_get_selected_project (GttProjectsTree *gpt);
+
 
 #endif // __PROJECTS_TREE_H__
